wip: api with tests!
